# postgres-gui

./: Cargo.toml
src/: ai_config.rs  app.rs  connection_dialog.rs  connection_manager.rs  db.rs  db_config.rs  main.rs  schema_tree.rs  theme.rs  types.rs
src/components/: ai_chat.rs  ai_settings_dialog.rs  connection_dialog.rs  connection_item.rs  mod.rs  provider_config.rs  schema_tree.rs  settings_dialog.rs  sidebar.rs  tab_bar.rs  welcome_view.rs
src/core/: agent_client.rs  agent_config.rs  agent_tools.rs  ai_client.rs  config_loader.rs  configured_provider.rs  connection_config.rs  event_stream_parser.rs  mod.rs  provider.rs
src/core/agent_tools/: describe_table.rs  execute_sql.rs  explain_query.rs  list_schemas.rs  list_tables.rs  mod.rs  show_table_stats.rs
src/ui/: input_field.rs
