[package]
name = "pgeru"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["svg", "tokio", "highlighter"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
iced_aw = { version = "0.14.1", features = ["context_menu", "drop_down"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
